[FIXED]: fixed text overflow in meal name

--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -645,6 +645,11 @@ button,
     .meal-item {
         .meal-link {
             text-decoration: underline;
+            .meal-name{
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
         }
     }
 }
